--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,19 @@ on:
 jobs:
   metadata:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     outputs:
       matrix: ${{ steps.generate-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Extract directories with differences
         id: diff-dirs
         run: |
+          #git fetch
+          echo "Pull request's base branch is: ${{ github.base_ref }}"
+          echo "This branch is ${GITHUB_REF#refs/heads/}"
           diffs=$(git diff remotes/origin/${{ github.base_ref }}..HEAD --diff-filter=ACDMR --name-only)
           echo $diffs
       - name: Generate matrix
@@ -25,6 +31,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     needs: metadata
     strategy:
       matrix: ${{ fromJson(needs.metadata.outputs.matrix) }}
