--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           # 差分があったファイルのディレクトリ名を取得
           top_dir_names=()
           for file in ${{ steps.diff_dirs.outputs.all_changed_files }}; do
-            top_dir_names+=($(echo $x | awk -F/ '{printf("%s",$1)}'))
+            top_dir_names+=($(echo $file | awk -F/ '{printf("%s",$1)}'))
           done
           echo "${top_dir_names[@]}"
           top_dir_names=($( printf "%s\n" "${top_dir_names[@]}" | sort -u ))
