--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           echo "diff_dirs = ( ${top_dir_names[@]} )"
 
           # service_name/ 以下の、modules以外のディレクトリを列挙
-          matrix_json="matrix={\"include\":["
+          matrix_json="{\"include\":["
           for dir in "${top_dir_names[@]}"; do
             for env in $(ls -d ${dir}/*/ | grep -v modules || true); do
               matrix_json+="{\"dir\":\"$dir\",\"env\":\"$(basename $env)\"},"
